# ldrd_virus_work

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  example_render.py  example_render2.py  mypy.ini  pyproject.toml  requirements.txt  retarget.py  ruff.toml
.github/workflows/: ci.yml
.gitlab/merge_request_templates/: template.md
analysis/: spillover_predict.py
ci/: requirements.txt  requirements_high.txt  requirements_low.txt
data/: parse_novel_data.py
render_tools/: render_igg.py
viral_seq/: conftest.py  run_workflow.py  structural_annotated.csv
viral_seq/analysis/: biological_analysis.py  classifier.py  dtra_utils.py  feature_importance.py  get_features.py  rfc_utils.py  spillover_predict.py
viral_seq/cli/: cli.py
viral_seq/data/: Housekeeping_accessions.txt  ISG_sequences_ncbiSearch.csv  ISG_source.csv  ISG_transcript_ids.txt  Mollentze_Holdout.csv  Mollentze_Holdout_Fixed.csv  Mollentze_Holdout_Shuffled.csv  Mollentze_Training.csv  Mollentze_Training_Fixed.csv  Mollentze_Training_Shuffled.csv  NovelViruses.csv  Relabeled_Test.csv  Relabeled_Test_Human_Shuffled.csv  Relabeled_Test_Mammal_Shuffled.csv  Relabeled_Test_Primate_Shuffled.csv  Relabeled_Train.csv  Relabeled_Train_Human_Shuffled.csv  Relabeled_Train_Mammal_Shuffled.csv  Relabeled_Train_Primate_Shuffled.csv  add_surface_exposed.py  check_entries.py  df_moll_fig3.parquet.gzip  fix_virus_names.py  get_ISG_transcript_ids.py  igsf_training.csv  make_alternate_datasets.py  make_data_summary_plots.py  make_relabeled_dataset.py  make_target_comparison_plot.py  parse_novel_data.py  receptor_training.csv  relabeled_data.npz  summarize_changes_v_mollentze.py  surface_exposed_df.csv
viral_seq/tests/: Chikungunya_features.csv  HumanGene_SearchTest.csv  MERS-CoV_features.csv  Menangle_features.csv  Menangle_features_kmers.csv  TestSet.csv  TrainingSet.csv  cv_metrics_exp.csv  partial_record.csv  test_bio.py  test_classifier.py  test_data.py  test_dtra_utils.py  test_expanded_kmers.csv  test_feature_importance.py  test_features.py  test_workflow.py  (+8 more)
(+173 files in other folders)
