[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2"
]

[project.scripts]
viral_seq = "viral_seq.cli.cli:cli"

[project]
name = "viral_seq"
dynamic = ['version']
dependencies = [
    "biopython==1.81",
    "fsspec>=2024.6.0",
    "lightgbm>=4.4.0",
    "matplotlib>=3.7.1",
    "numpy>=1.25.0",
    "pandas>=2.0.2",
    "polars>=0.19.2",
    "pyarrow>=12.0.1",
    "optuna>=3.6.1",
    "ray>=2.22.0",
    "rich-click>=1.6.1",
    "scikit-learn>=1.3.2",
    "scikit-bio>=0.5.8",
    "scipy>=1.14.0",
    "shap==0.46.0",
    "tqdm>=4.65.0",
    "xgboost>=2.1.1",
]
[project.optional-dependencies]
isg = ['pybiomart>=0.2.0']
dev = ['mypy==1.3.0', 'black==23.3.0', 'ruff==0.8.1', 'pandas-stubs', 'types-tqdm', 'pytest', 'pytest-cov', 'pytest-mock']
[tool.setuptools]
packages=['viral_seq']
[tool.setuptools.package-data]
viral_seq = ["**/*"]
