[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2"
]

[project.scripts]
viral_seq = "viral_seq.cli.cli:cli"

[project]
name = "viral_seq"
dynamic = ['version']
dependencies = [
    "biopython==1.81",
    "fsspec>=2024.6.0",
    "lightgbm>=4.4.0",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "polars>=0.19.2",
    "pyarrow>=14.0.2",
    "optuna>=3.6.1",
    "ray>=2.37.0",
    "rich-click>=1.6.1",
    "scikit-learn>=1.4.2",
    "scikit-bio>=0.5.8",
    "scipy>=1.11.4",
    "seaborn>=0.13.2",
    "shap==0.47.1",
    "shapely>=2.0.6",
    "taxonomy_ranks>=0.0.10",
    "tqdm>=4.65.0",
    "xgboost>=2.1.1",
]
[project.optional-dependencies]
isg = ['pybiomart>=0.2.0']
dev = ['mypy==1.3.0', 'black==23.3.0', 'ruff==0.8.1', 'pandas-stubs', 'types-seaborn', 'types-shapely', 'types-tqdm', 'pytest', 'pytest-cov', 'hypothesis', 'pytest-mock']
[tool.setuptools]
packages=['viral_seq']
[tool.setuptools.package-data]
viral_seq = ["**/*"]
